--- a/src/main/frontend/src/styles/Header.css
+++ b/src/main/frontend/src/styles/Header.css
@@ -38,7 +38,9 @@
     padding: 10px; /* 내부 여백을 설정하여 이미지와 입력 필드 사이의 간격을 조절할 수 있습니다. */
     border-radius: 20px;
     border: none;
+    color: white;
     /* border: 2px solid #ccc; 필요에 따라 테두리 스타일을 추가할 수 있습니다. */
+    outline: none;
 }
 
 .header {
