--- a/src/main/frontend/src/styles/MainCategory.css
+++ b/src/main/frontend/src/styles/MainCategory.css
@@ -1,9 +1,59 @@
 .main-category {
     background-color: #272727;
-    min-height: 7vh;
+    min-height: 9vh;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
     aspect-ratio: auto;
+    border-bottom: 1px solid #595959;
+}
+
+.category-menu {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    margin-right: 18px;
+}
+
+.category {
+    cursor: pointer;
+    position: relative;
+    transition: background-color 0.3s;
+    margin: 15px;
+    font-size: 20px;
+    color: #FFFFFF;
+    white-space: nowrap;
+}
+
+.category:hover {
+
+}
+
+.subcategories {
+    width: auto;
+    white-space: nowrap;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #323030;
+    border: 1px solid #FFFFFF;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    display: none;
+    list-style: none;
+    margin: 0px;
+    z-index: 1;
+    border-radius: 10px;
+}
+
+.subcategories li{
+    margin: 10px;
+}
+
+.category:hover .subcategories {
+    display: block;
+}
+
+a{
+    color: white;
 }
