feat: 회원가입 폼 유효성 추가중

--- a/src/main/frontend/src/styles/register/customSelect.css
+++ b/src/main/frontend/src/styles/register/customSelect.css
@@ -1,7 +1,8 @@
 .select-box {
     position: relative;
-    width: 420px;
-    padding: 10px;
+    width: 407px;
+    padding-top: 9px;
+    padding-left: 5px;
     border-radius: 1px;
     background-color: #ffffff;
     align-self: center;
