--- a/src/main/frontend/src/styles/MainPage/RollingBanner.css
+++ b/src/main/frontend/src/styles/MainPage/RollingBanner.css
@@ -5,6 +5,13 @@
     border: 1px solid #AAAAAA;
     margin-right: 50px;
     margin-left: 50px;
+    overflow: hidden;
+}
+
+.RollingBanner img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .custom-indicators {
@@ -30,4 +37,42 @@
 .custom-indicators div.active {
     background-color: red;
     color: #fff;
+}
+
+/* 이전(왼쪽) 버튼 스타일 */
+.prev-button {
+    background-color: #333; /* 기본 배경색 */
+    color: #fff; /* 기본 텍스트 색상 */
+    transition: background-color 0.3s, color 0.3s; /* 호버 애니메이션 지속 시간 설정 */
+    font-size: 24px; /* 아이콘 크기 조절 */
+    border: none; /* 테두리 제거 */
+    height: 100px;
+}
+
+.prev-button:hover {
+    background-color: #555; /* 호버 시 배경색 변경 */
+    color: #fff; /* 호버 시 텍스트 색상 변경 */
+}
+
+/* 다음(오른쪽) 버튼 스타일 */
+.next-button {
+    background-color: #333; /* 기본 배경색 */
+    color: #fff; /* 기본 텍스트 색상 */
+    transition: background-color 0.3s, color 0.3s; /* 호버 애니메이션 지속 시간 설정 */
+    font-size: 24px; /* 아이콘 크기 조절 */
+    border: none; /* 테두리 제거 */
+    height: 100px;
+}
+
+.next-button:hover {
+    background-color: #555; /* 호버 시 배경색 변경 */
+    color: #fff; /* 호버 시 텍스트 색상 변경 */
+}
+
+.prev-button::before{
+    content: '◁';
+}
+
+.next-button::before{
+    content: '▷';
 }
