--- a/src/main/frontend/src/styles/register/registerForm.css
+++ b/src/main/frontend/src/styles/register/registerForm.css
@@ -74,6 +74,27 @@
   margin-left: 35px;
 }
 
+.c-r-f-validationCheck {
+  width: 100%;
+  height: auto;
+  margin-bottom: 30px;
+}
+
+.c-r-f-error {
+  color: white;
+  font-weight: bold;
+}
+
+.c-r-f-authenticationCode {
+  border-radius: var(--br-8xs);
+  background-color: var(--color-white);
+  border: 2px solid var(--color-silver-200);
+  box-sizing: border-box;
+  width: 450px;
+  height: 50px;
+  margin-bottom: 20px;
+}
+
 
 input {
   margin-left: 40px;
@@ -82,3 +103,5 @@ input {
   width: 75%;
   border: none;
 }
+
+
