feat: 로그인 페이지(팝업) 추가

--- a/src/main/frontend/src/styles/globalStyles.css
+++ b/src/main/frontend/src/styles/globalStyles.css
@@ -22,6 +22,16 @@ ul{
     margin-bottom: 40px;
 }
 
+/* webkit input 자동완성시 파란색배경 없애기 */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+    -webkit-transition: background-color 9999s ease-out;
+    -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+}
+
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=NanumGothicCoding:wght@400;700&display=swap");
 body {
