--- a/src/main/frontend/src/styles/login/loginForm.css
+++ b/src/main/frontend/src/styles/login/loginForm.css
@@ -6,17 +6,41 @@
     justify-content: center;
 }
 
+.c-f-g-login-component-top{
+    border-radius: var(--br-8xs) var(--br-8xs) 0px 0px;
+    background-color: var(--color-white);
+    border: 1px solid var(--color-silver-100);
+    box-sizing: border-box;
+    width: 270px;
+    height: 45px;
+  }
+  
+  .c-f-g-login-component-bottom{
+    border-radius: 0px 0px var(--br-8xs) var(--br-8xs);
+    background-color: var(--color-white);
+    border-right: 1px solid var(--color-silver-200);
+    border-bottom: 1px solid var(--color-silver-200);
+    border-left: 1px solid var(--color-silver-200);
+    box-sizing: border-box;
+    width: 270px;
+    height: 45px;
+  }
+
+  .login-button {
+    border-radius: var(--br-8xs);
+    background-color: var(--color-white);
+    border: 2px solid var(--color-silver-200);
+    box-sizing: border-box;
+    width: 450px;
+    height: 40px;
+  }
+
 .fast-login-wrapper {
     display: flex;
     justify-content: space-evenly;
     margin-top: 15px;
     margin-bottom: 15px;
-}
-
-.login-button {
-    --bs-btn-color: #000;
-    --bs-btn-bg: #ffffff;
-    --bs-btn-border-color: #000000;
+    width: 250px;
 }
 
 .find-account {
@@ -40,16 +64,15 @@
 
 .custom-form-group {
     display: flex;
-    height: 200px;
+    height: 150px;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
+    justify-content: center;
 }
 
 .gnb-log-main-img {
     width: 200px;
     height: 70px;
-    background: url(${GnbLog}) no-repeat;
     background-size: cover;
 }
 
@@ -61,4 +84,16 @@
     color: red;
     font-size: 0.8em;
     margin-top: 5px;
+}
+
+.custom-form-group input {
+    margin-left: 40px;
+    margin-top: 4px;
+    height: 75%;
+    width: 75%;
+    border: none;
+  }
+  
+.content-item-button {
+    margin-bottom: 20px;
 }
