--- a/src/main/frontend/src/styles/MainPage/RollingBanner.css
+++ b/src/main/frontend/src/styles/MainPage/RollingBanner.css
@@ -43,9 +43,9 @@
 .prev-button {
     background-color: #333; /* 기본 배경색 */
     color: #fff; /* 기본 텍스트 색상 */
-    transition: background-color 0.3s, color 0.3s; /* 호버 애니메이션 지속 시간 설정 */
-    font-size: 24px; /* 아이콘 크기 조절 */
-    border: none; /* 테두리 제거 */
+    transition: background-color 0.3s, color 0.3s;
+    font-size: 24px;
+    border: none;
     height: 100px;
 }
 
