--- a/src/main/frontend/src/styles/myInfo/myInfoSide.css
+++ b/src/main/frontend/src/styles/myInfo/myInfoSide.css
@@ -4,4 +4,23 @@
     width: 350px;
     height: 800px;
     box-shadow: 5px 1px 8px 0 rgba(0,0,0,.06);
+    border : 1px solid var(--color-silver-200);
+  }
+  
+  .p-l-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+  }
+
+  .p-l-info-content {
+    width: 280px;
+    padding-top: 50px;
+    margin: 0 auto;
+  }
+
+  .p-l-i-tab {
+    height: 50px;
+    font-size: 18px;
   }
