--- a/src/main/frontend/src/styles/globalStyles.css
+++ b/src/main/frontend/src/styles/globalStyles.css
@@ -70,4 +70,58 @@ body {
 
   /* Border radiuses */
   --br-8xs: 5px;
+
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-bold-11-44-font-family: "Arial-Bold",
+    Helvetica;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-bold-11-44-font-size: 11.4375px;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-bold-11-44-font-style: normal;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-bold-11-44-font-weight: 700;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-bold-11-44-letter-spacing: -1px;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-bold-11-44-line-height: 18px;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-bold-11-63-font-family: "Arial-Bold",
+    Helvetica;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-bold-11-63-font-size: 11.625px;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-bold-11-63-font-style: normal;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-bold-11-63-font-weight: 700;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-bold-11-63-letter-spacing: -1px;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-bold-11-63-line-height: 18px;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-10-83-font-family: "Arial-Narrow",
+    Helvetica;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-10-83-font-size: 10.828125px;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-10-83-font-style: normal;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-10-83-font-weight: 400;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-10-83-letter-spacing: -0.5px;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-10-83-line-height: 16px;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-11-font-family: "Arial-Narrow",
+    Helvetica;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-11-font-size: 11px;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-11-font-style: normal;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-11-font-weight: 400;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-11-letter-spacing: 0px;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-11-line-height: 10.449999809265137px;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-12-font-family: "Arial-Narrow",
+    Helvetica;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-12-font-size: 12px;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-12-font-style: normal;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-12-font-weight: 400;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-12-letter-spacing: 0px;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-12-line-height: 15.199999809265137px;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-16-font-family: "Arial-Narrow",
+    Helvetica;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-16-font-size: 16px;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-16-font-style: normal;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-16-font-weight: 400;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-16-letter-spacing: 0px;
+  --member-ssg-com-comm-popup-shpplocform-ssg-626-4000244140625x605-5999755859375-arial-narrow-16-line-height: 38px;
+  --memberssgcomcommpopupshpplocformssg-626400024414062-5x-605599975585937-5alabaster: rgba(249, 249, 249, 1);
+  --memberssgcomcommpopupshpplocformssg-626400024414062-5x-605599975585937-5black: rgba(0, 0, 0, 1);
+  --memberssgcomcommpopupshpplocformssg-626400024414062-5x-605599975585937-5boulder: rgba(119, 119, 119, 1);
+  --memberssgcomcommpopupshpplocformssg-626400024414062-5x-605599975585937-5mercury: rgba(229, 229, 229, 1);
+  --memberssgcomcommpopupshpplocformssg-626400024414062-5x-605599975585937-5nero: rgba(255, 255, 255, 1);
+  --memberssgcomcommpopupshpplocformssg-626400024414062-5x-605599975585937-5silver: rgba(204, 204, 204, 1);
+  --memberssgcomcommpopupshpplocformssg6264000244140625x6055999755859375blue-stone: rgba(255, 104, 101, 1);
+  --memberssgcomcommpopupshpplocformssg6264000244140625x6055999755859375dove-gray: rgba(102, 102, 102, 1);
+  --memberssgcomcommpopupshpplocformssg6264000244140625x6055999755859375mine-shaft: rgba(59, 59, 59, 1);
+  --memberssgcomcommpopupshpplocformssg6264000244140625x6055999755859375silver-chalice: rgba(178, 178, 178, 1);
+
 }
