--- a/src/main/frontend/src/styles/myInfo/buyList/buyListContent.css
+++ b/src/main/frontend/src/styles/myInfo/buyList/buyListContent.css
@@ -23,3 +23,12 @@
 .t-small-span {
     font-size: 44px;
 }
+
+.m-c-g-t-buy-content {
+    padding: 10px;
+    border: 1px solid var(--color-silver-100);
+    background-color: var(--color-white);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
