feat(GoodsControl.js, GoodsDetailsProduct.js, Header.js, OrderInfo.js, ReviewWrite.js) : 기타 UI 재정리 및 분기처리, mysql DB 연결

--- a/src/main/frontend/src/styles/GoodsDetails/GoodsDetailsTab/ReviewWrite.css
+++ b/src/main/frontend/src/styles/GoodsDetails/GoodsDetailsTab/ReviewWrite.css
@@ -2,6 +2,7 @@
     margin-top: 50px;
     margin-left: 300px;
     margin-right: 300px;
+    width: 1690px;
 }
 
 .review-title{
@@ -11,12 +12,11 @@
 
 .review-score{
     display: block;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
     color: white;
     margin-top: 20px;
     margin-bottom: 30px;
-
+    width : 1082px;
 }
 
 .review-score-title{
@@ -115,12 +115,13 @@
 }
 
 .review-write-area-id-id input{
-    color: white;
-    background-color: #272727;
-    border: 1px solid #AAAAAA;
-    outline: none;
     width: 300px;
-    height: 20px;
+    padding: 5px;
+    font-size: 16px;
+    border: 2px solid #3498db;
+    border-radius: 5px;
+    outline: none; /* 기본 포커스 효과 제거 */
+    transition: border-color 0.3s; /* 부드러운 효과를 위한 트랜지션 설정 */
 }
 
 .review-write-area-subject{
@@ -155,12 +156,13 @@
 }
 
 .review-write-area-subject-subject input{
-    color: white;
-    background-color: #272727;
-    border: 1px solid #AAAAAA;
-    outline: none;
     width: 600px;
-    height: 20px;
+    padding: 5px;
+    font-size: 16px;
+    border: 2px solid #3498db;
+    border-radius: 5px;
+    outline: none; /* 기본 포커스 효과 제거 */
+    transition: border-color 0.3s; /* 부드러운 효과를 위한 트랜지션 설정 */
 }
 
 .review-write-area-contents{
@@ -230,22 +232,35 @@
 }
 
 .review-write-area-file-file-input{
-    color: white;
-    background-color: #272727;
-    border: 1px solid #AAAAAA;
-    outline: none;
     width: 600px;
-    height: 20px;
-    pointer-events: none;
+    padding: 5px;
+    font-size: 16px;
+    border: 2px solid #3498db;
+    border-radius: 5px;
+    outline: none; /* 기본 포커스 효과 제거 */
+    transition: border-color 0.3s; /* 부드러운 효과를 위한 트랜지션 설정 */
 }
 
 .review-write-area-file-file button{
-    border: 1px solid #AAAAAA;
-    outline: none;
-    margin-left: 20px;
-    background-color: #272727;
-    color: #FFFFFF;
-    height: 25px;
+    display: inline-block;
+    padding: 5px 10px;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+    background-color: #3498db;
+    color: #fff;
+    border: 2px solid #3498db;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-left: 10px;
+
+    &:hover {
+        background-color: #2980b9;
+        border-color: #2980b9;
+    }
 }
 
 .review-submit-area{
