--- a/src/main/frontend/src/styles/Header.css
+++ b/src/main/frontend/src/styles/Header.css
@@ -51,6 +51,7 @@
     justify-content: center;
     font-size: calc(10px + 2vmin);
     aspect-ratio: auto;
+    width: 1690px;
 }
 
 .header-logo {
