--- a/src/main/frontend/src/styles/OpenMarket/GoodsControl.css
+++ b/src/main/frontend/src/styles/OpenMarket/GoodsControl.css
@@ -1,3 +1,7 @@
+.open-market{
+    width: 1690px;
+}
+
 .open-market-header{
     background-color: #000000;
     min-height: 8vh;
@@ -95,12 +99,18 @@
 }
 
 .goods-control-form-name-input input{
-    font-size: 15px;
-    width: 400px;
-    height: 25px;
-    border: #8b8b8b;
-    background-color: #AAAAAA;
-    outline: none;
+    width: 300px;
+    padding: 5px;
+    font-size: 16px;
+    border: 2px solid #3498db;
+    border-radius: 5px;
+    outline: none; /* 기본 포커스 효과 제거 */
+    transition: border-color 0.3s; /* 부드러운 효과를 위한 트랜지션 설정 */
+}
+
+.goods-control-form-name-input input:focus{
+    border-color: #2ecc71; /* 포커스 시 테두리 색상 변경 */
+    box-shadow: 0 0 5px rgba(46, 204, 113, 0.5); /* 포커스 시 약간의 그림자 효과 */
 }
 
 .goods-control-form-img{
@@ -137,7 +147,24 @@
 }
 
 .goods-control-form-img-img button{
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 15px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+    background-color: #FFFFFF;
+    color: #000000;
+    border: 2px solid #3498db;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
+    &:hover {
+        background-color: #2980b9;
+        border-color: #2980b9;
+    }
 }
 
 .goods-control-form-price{
@@ -166,12 +193,18 @@
 }
 
 .goods-control-form-price-input input{
-    font-size: 15px;
     width: 150px;
-    height: 25px;
-    border: #8b8b8b;
-    background-color: #AAAAAA;
-    outline: none;
+    padding: 5px;
+    font-size: 16px;
+    border: 2px solid #3498db;
+    border-radius: 5px;
+    outline: none; /* 기본 포커스 효과 제거 */
+    transition: border-color 0.3s; /* 부드러운 효과를 위한 트랜지션 설정 */
+}
+
+.goods-control-form-price-input input:focus{
+    border-color: #2ecc71; /* 포커스 시 테두리 색상 변경 */
+    box-shadow: 0 0 5px rgba(46, 204, 113, 0.5); /* 포커스 시 약간의 그림자 효과 */
 }
 
 .goods-control-form-count{
@@ -200,12 +233,107 @@
 }
 
 .goods-control-form-count-input input{
-    font-size: 15px;
     width: 150px;
-    height: 25px;
-    border: #8b8b8b;
-    background-color: #AAAAAA;
-    outline: none;
+    padding: 5px;
+    font-size: 16px;
+    border: 2px solid #3498db;
+    border-radius: 5px;
+    outline: none; /* 기본 포커스 효과 제거 */
+    transition: border-color 0.3s; /* 부드러운 효과를 위한 트랜지션 설정 */
+}
+
+.goods-control-form-count-input input:focus{
+    border-color: #2ecc71; /* 포커스 시 테두리 색상 변경 */
+    box-shadow: 0 0 5px rgba(46, 204, 113, 0.5); /* 포커스 시 약간의 그림자 효과 */
+}
+
+.goods-control-form-category{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 30px;
+    padding-top: 30px;
+    border-bottom: 1px solid #AAAAAA;
+}
+
+.goods-control-form-category-title{
+    flex: 1;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-left: 40px;
+}
+
+.goods-control-form-category-input{
+    flex: 7;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.goods-control-form-category-input select{
+    width: 150px;
+    padding: 5px;
+    font-size: 16px;
+    border: 2px solid #3498db;
+    border-radius: 5px;
+}
+
+.goods-control-form-category-input select:focus {
+    border-color: #2ecc71; /* 포커스 및 호버 시 테두리 색상 변경 */
+    box-shadow: 0 0 5px rgba(46, 204, 113, 0.5); /* 포커스 및 호버 시 약간의 그림자 효과 */
+}
+
+.goods-control-form-option{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 30px;
+    padding-top: 30px;
+    border-bottom: 1px solid #AAAAAA;
+}
+
+.goods-control-form-option-title{
+    flex: 1;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-left: 40px;
+}
+
+.goods-control-form-option-input{
+    flex: 7;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.goods-control-form-option-input select{
+    width: 150px;
+    padding: 5px;
+    font-size: 16px;
+    border: 2px solid #3498db;
+    border-radius: 5px;
+}
+
+.goods-control-form-option-input select:focus {
+    border-color: #2ecc71; /* 포커스 및 호버 시 테두리 색상 변경 */
+    box-shadow: 0 0 5px rgba(46, 204, 113, 0.5); /* 포커스 및 호버 시 약간의 그림자 효과 */
+}
+
+.goods-control-form-option-input input{
+    width: 150px;
+    padding: 5px;
+    font-size: 16px;
+    border: 2px solid #3498db;
+    border-radius: 5px;
+}
+
+.goods-control-form-option-input input:focus {
+    border-color: #2ecc71; /* 포커스 및 호버 시 테두리 색상 변경 */
+    box-shadow: 0 0 5px rgba(46, 204, 113, 0.5); /* 포커스 및 호버 시 약간의 그림자 효과 */
 }
 
 .goods-control-form-country{
@@ -234,9 +362,16 @@
 }
 
 .goods-control-form-country-input select{
-    text-align: center;
-    outline: none;
-    font-size: 15px;
+    width: 150px;
+    padding: 5px;
+    font-size: 16px;
+    border: 2px solid #3498db;
+    border-radius: 5px;
+}
+
+.goods-control-form-country-input select:focus {
+    border-color: #2ecc71; /* 포커스 및 호버 시 테두리 색상 변경 */
+    box-shadow: 0 0 5px rgba(46, 204, 113, 0.5); /* 포커스 및 호버 시 약간의 그림자 효과 */
 }
 
 .goods-control-form-detail{
