design(Header.js, Footer.js, MainCategory.js, GoodsList.js, GoodsListCategory.js, GoodsPayment.js, MainPage.js, OpenMarket.js) :페이지 잘림 현상 고침, 폴더 정리

--- a/src/main/frontend/src/styles/GoodsList/GoodsListCategory.css
+++ b/src/main/frontend/src/styles/GoodsList/GoodsListCategory.css
@@ -1,7 +1,7 @@
 .goods-list-categories{
     margin-left: 215px;
     margin-right: 200px;
-    width: 1250px;
+    width: 80%;
 }
 
 .goods-list-category-title{
