--- a/src/main/frontend/src/styles/Footer.css
+++ b/src/main/frontend/src/styles/Footer.css
@@ -10,7 +10,7 @@
     bottom : 0;
     text-align: center;
     left: 0;
-    width: 1690px;
+    width: 100%;
     margin-top: auto;
 }
 .footer-logo{
