--- a/src/main/frontend/src/styles/GoodsList/Goods.css
+++ b/src/main/frontend/src/styles/GoodsList/Goods.css
@@ -4,7 +4,7 @@
     justify-content: center;
     flex-wrap: wrap;
     margin-top: 50px;
-    width: 1670px;
+    width: 100%;
 }
 
 .goods-list-header{
