--- a/src/main/frontend/src/styles/GoodsPayment/OrderInfo.css
+++ b/src/main/frontend/src/styles/GoodsPayment/OrderInfo.css
@@ -2,7 +2,7 @@
     margin-left: 300px;
     margin-right: 300px;
     margin-top: 80px;
-    width: 1080px;
+    width: 64%;
 }
 
 .order-info-area{
@@ -202,10 +202,7 @@
     align-items: center;
     justify-content: center;
     border-bottom: 2px solid #555555;
-    padding-top: 35px;
-    padding-bottom: 35px;
-    padding-right: 65px;
-    padding-left: 70px;
+    padding: 35px 65px 35px 70px;
 }
 
 .order-info-total-pay-price{
