--- a/src/main/frontend/src/styles/Header.css
+++ b/src/main/frontend/src/styles/Header.css
@@ -51,12 +51,12 @@
     justify-content: center;
     font-size: calc(10px + 2vmin);
     aspect-ratio: auto;
-    width: 1690px;
+    width: 100%;
 }
 
 .header-logo {
     display: inline-block;
-    margin-left: auto;
+    margin-left: 350px;
     margin-right: auto;
 }
 
