--- a/src/main/frontend/src/styles/GoodsPayment/OrderInfo.css
+++ b/src/main/frontend/src/styles/GoodsPayment/OrderInfo.css
@@ -108,6 +108,28 @@
     align-items: center;
 }
 
+.order-info-content-discount button{
+    display: inline-block;
+    padding: 5px 10px;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+    background-color: #3498db;
+    color: #fff;
+    border: 2px solid #3498db;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-left: 8px;
+
+    &:hover {
+        background-color: #2980b9;
+        border-color: #2980b9;
+    }
+}
+
 .order-info-content-price{
     color: #FFFFFF;
     flex: 1;
