feat(Goods.java, GoodsService.java, GoodsController.java, Options.java) : 오픈마켓 상품 등록 기능 구현

--- a/src/main/frontend/src/styles/GoodsDetails/GoodsDetailsProduct.css
+++ b/src/main/frontend/src/styles/GoodsDetails/GoodsDetailsProduct.css
@@ -54,6 +54,20 @@
     white-space: nowrap;
 }
 
+.product-area-brand{
+    display: flex;
+    margin-top: 13px;
+}
+
+.product-area-brand-title{
+    white-space: nowrap;
+}
+
+.product-area-brand-price{
+    margin-left: auto;
+    white-space: nowrap;
+}
+
 .product-area-options{
     display: flex;
     margin-top: 13px;
