--- a/src/main/frontend/src/styles/OpenMarket/GoodsAdmin.css
+++ b/src/main/frontend/src/styles/OpenMarket/GoodsAdmin.css
@@ -1,5 +1,6 @@
 .open-market{
     width: 100%;
+
 }
 .open-market-header{
     background-color: #000000;
@@ -82,6 +83,7 @@
     border-top: 1px solid #555555;
     background-color: #3d3d3d;
     padding: 10px;
+    border-radius: 10px;
 }
 .open-market-content-header-no{
     display: flex;
@@ -161,6 +163,7 @@
     justify-content: center;
     padding: 10px;
     border: 1px solid #555555;
+    border-radius: 10px;
 }
 
 .open-market-content-list-no{
