--- a/src/main/frontend/src/styles/OpenMarket/GoodsControl.css
+++ b/src/main/frontend/src/styles/OpenMarket/GoodsControl.css
@@ -71,6 +71,7 @@
 
 .goods-control-form{
     background-color: white;
+    border-radius: 30px;
 }
 
 .goods-control-form-name{
@@ -365,9 +366,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-bottom: 30px;
+    padding-bottom: 50px;
     padding-top: 30px;
-    border-bottom: 1px solid #AAAAAA;
 }
 
 .goods-control-form-detail-title{
@@ -379,11 +379,16 @@
     padding-left: 40px;
 }
 
-.goods-control-form-detail-input{
+.display-block{
+    display: block;
     flex: 7;
+}
+
+.goods-control-form-detail-input{
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    margin-top: 30px;
 }
 
 .goods-control-submit{
@@ -437,4 +442,10 @@
 .goods-control-form-brand-input input:focus {
     border-color: #2ecc71; /* 포커스 시 테두리 색상 변경 */
     box-shadow: 0 0 5px rgba(46, 204, 113, 0.5); /* 포커스 시 약간의 그림자 효과 */
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button{
+    -webkit-appearance: none;
+    margin: 0 ;
 }
