feat() : goodsList 검색, 부모카테고리, 자식카테고리 진입시 상품 노출 리뷰 노출 부분 제외 완성

--- a/src/main/frontend/src/styles/Header.css
+++ b/src/main/frontend/src/styles/Header.css
@@ -32,6 +32,10 @@
     margin-left: 10px;
     align-items: center;
 }
+
+.marginLeft img{
+    cursor: pointer;
+}
 .custom-input {
     width: 220px;
     background-color : #323030;
