--- a/src/main/frontend/src/styles/GoodsDetails/GoodsDetailsProduct.css
+++ b/src/main/frontend/src/styles/GoodsDetails/GoodsDetailsProduct.css
@@ -52,6 +52,7 @@
 .product-area-deliver-price{
     margin-left: auto;
     white-space: nowrap;
+    font-size: 14px;
 }
 
 .product-area-brand{
@@ -119,7 +120,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: 70px;
+    margin-left: 50px;
 }
 
 .product-area-count-count button{
