feat() : 상품 상세 마무리(qna 댓글 구현) => 작성하는건 x

--- a/src/main/frontend/src/styles/GoodsDetails/GoodsDetailsProduct.css
+++ b/src/main/frontend/src/styles/GoodsDetails/GoodsDetailsProduct.css
@@ -168,3 +168,21 @@
     justify-content: center;
 
 }
+
+.price-zero{
+    display: grid;
+    place-items: center;
+    margin-top: 10px;
+    color: red;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.quantity-zero{
+    display: grid;
+    place-items: center;
+    margin-top: 10px;
+    color: red;
+    font-size: 30px;
+    font-weight: bold;
+}
