--- a/src/main/frontend/src/components/admin/userTool/adminUserTool.css
+++ b/src/main/frontend/src/components/admin/userTool/adminUserTool.css
@@ -22,6 +22,7 @@
     border: 2px solid var(--color-silver-100);
     height: 120px;
     padding: 10px;
+    box-shadow: 0 2px 5px rgba(0,0,0,.25);
 }
 
     .u-t-c-tab {
