--- a/src/main/frontend/src/styles/GoodsDetails/GoodsDetailsTab.css
+++ b/src/main/frontend/src/styles/GoodsDetails/GoodsDetailsTab.css
@@ -192,6 +192,7 @@
     align-items: center;
     display: flex;
     justify-content: flex-start;
+    margin-bottom: 15px;
 }
 
 .product-tab-review-content-content p {
@@ -336,9 +337,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-left: 15px;
-    padding-right: 15px;
     border-bottom: 1px solid #858a8d;
+    padding: 10px 15px;
 }
 
 .product-tab-qna-content-no{
@@ -358,6 +358,10 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.product-tab-qna-content-subject p {
+    color : #FFFFFF;
 }
 
 .product-tab-qna-content-name{
@@ -387,6 +391,18 @@
     color: #FFFFFF;
 }
 
+.product-tab-qna-contents-img{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px
+}
+
+.product-tab-qna-contents-img img{
+    width: 200px;
+    height: 150px;
+}
+
 .product-tab-qna-contents-detail{
     display: flex;
     align-items: center;
@@ -401,15 +417,45 @@
 
 .product-tab-qna-contents-detail-content{
     flex: 12;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    display: block;
     padding-bottom: 20px;
+    padding-top: 20px;
     border-bottom: 1px solid #AAAAAA;
+    border-top: 1px solid #AAAAAA;
+}
+
+.product-tab-qna-contents-detail-content button{
+    margin-left: auto;
+    display: inline-block;
+    padding: 5px 10px;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+    background-color: #3498db;
+    color: #fff;
+    border: 2px solid #3498db;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+    &:hover {
+        background-color: #2980b9;
+        border-color: #2980b9;
+    }
 }
 
 .product-tab-qna-contents-detail-content p{
     color: white;
+}
+
+.product-tab-qna-contents-detail-content-content {
+    display: flex;
+}
+
+.product-tab-qna-contents-detail-content-content a {
+    margin-left: auto;
 }
 
 .product-tab-qna-contents-detail2{
