--- a/src/main/frontend/src/styles/GoodsPayment/OrderInfo.css
+++ b/src/main/frontend/src/styles/GoodsPayment/OrderInfo.css
@@ -224,16 +224,16 @@
     align-items: center;
     justify-content: center;
     border-bottom: 2px solid #555555;
-    padding: 35px 65px 35px 70px;
+    padding: 35px 62px 35px 62px;
 }
 
 .order-info-total-pay-price{
     color: #FFFFFF;
-    flex: 1;
+    flex: 1.2;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold;
 }
 
@@ -253,7 +253,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold;
 }
 
@@ -263,17 +263,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 30px;
+    font-size: 18px;
     font-weight: bold;
 }
 
 .order-info-total-pay-discount{
     color: #FFFFFF;
-    flex: 1;
+    flex: 1.2;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold;
 }
 
@@ -289,11 +289,11 @@
 
 .order-info-total-pay-total{
     color: #FFFFFF;
-    flex: 1;
+    flex: 1.2;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold;
 }
 
@@ -349,10 +349,44 @@
 }
 
 .pay-area-button button{
-    padding: 10px;
-    color: white;
-    background-color: #272727;
-    border: 1px solid #AAAAAA;
-    width: 100px;
-    height: 50px;
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 15px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+    background-color: #FFFFFF;
+    color: #000000;
+    border: 2px solid #AAAAAA;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+    &:hover {
+        background-color: #2980b9;
+        border-color: #2980b9;
+    }
+}
+
+.modal-button{
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 15px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+    background-color: #FFFFFF;
+    color: #000000;
+    border: 2px solid #AAAAAA;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-left: 730px;
+
+    &:hover {
+        background-color: #2980b9;
+        border-color: #2980b9;
+    }
 }
