--- a/src/main/frontend/src/components/admin/couponTool/couponForm.css
+++ b/src/main/frontend/src/components/admin/couponTool/couponForm.css
@@ -98,3 +98,11 @@
     border: 1px solid var(--color-silver-200);
     padding: 8px;
 }
+
+.a-s-c-tab-coupon span {
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    padding-left: 20px;
+    margin-bottom: 20px;
+}
