--- a/src/main/frontend/src/components/OrderList/cartList.css
+++ b/src/main/frontend/src/components/OrderList/cartList.css
@@ -1,6 +1,12 @@
 .cart-component {
     width: 905px;
-    color: white;
+    color: black;
+    background-color: white;
+    padding-right: 70px;
+    padding-left: 70px;
+    border-radius: 20px;
+    margin-top: 80px;
+    margin-bottom: 100px;
 }
 
 .c-c-inner-title {
