feat() : 주문 내역 페이지 구현, 결제 오류 fix

--- a/src/main/frontend/src/components/OrderList/cartItem.css
+++ b/src/main/frontend/src/components/OrderList/cartItem.css
@@ -36,6 +36,7 @@
     .cart-item-quantity {
         display: flex;
         align-items: center;
+        justify-content: center;
         flex : 1;
     }
 
