--- a/src/main/frontend/src/components/myPage/inMyQnA/myPageQnA.css
+++ b/src/main/frontend/src/components/myPage/inMyQnA/myPageQnA.css
@@ -6,3 +6,96 @@
     flex-direction: column;
     align-items: center;
 }
+
+.my-qna-header {
+    width: 100%;
+}
+
+.form-grid-tab {
+    display: flex;
+    height: auto;
+    align-items: center;
+    justify-content: flex-start;
+
+    padding-bottom: 10px;
+}
+
+.form-grid-tab span {
+    margin: 10px;
+}
+
+.form-grid-tab .qna-title {
+    border: 1px solid gray;
+    box-shadow: 0px 0px 2px gray;
+}
+
+.form-grid-tab .qna-content {
+    width: 350px;
+    height: 200px;
+    border: 1px solid gray;
+    box-shadow: 0px 0px 2px gray;
+}
+
+.form-grid-tab .btnQnA {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    border: 1px solid #282828;
+    justify-content: center;
+    align-items: center;
+    background-color: #9f9898;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    box-shadow: 0px 0px 2px gray;
+}
+
+.form-grid-tab .btnQnA:hover {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    border: 1px solid #282828;
+    justify-content: center;
+    align-items: center;
+    background-color: #7b6b6b;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    box-shadow: 0px 0px 2px gray;
+}
+
+    .my-qna-header div {
+        display: flex;
+        height: 40px;
+        border-bottom: 1px solid gray;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .my-qna-header div span {
+        font-size: 20px;
+        font-weight: bold;
+    }
+
+    .div-hptjmmcb {
+        align-items: flex-start;
+        display: flex;
+        flex-direction: column;
+        gap: 11px;
+        left: 0;
+        padding: 28px 0px 26px;
+        width: 470px;
+      }    
+
+      .link {
+        align-items: center;
+        align-self: stretch;
+        background-color: var(--shoppingnavercompopupreviewsmonthly-form4703999938964844x692nero);
+        border: 1px dashed;
+        border-color: var(--shoppingnavercompopupreviewsmonthly-form4703999938964844x692dove-gray);
+        display: flex;
+        gap: 7.68px;
+        height: 64.6px;
+        padding: 0.2px 109.53px 1.4px 110.19px;
+        position: relative;
+      }
