feat : 주문결제 주문데이터

--- a/src/main/frontend/src/styles/Footer.css
+++ b/src/main/frontend/src/styles/Footer.css
@@ -10,9 +10,14 @@
     bottom : 0;
     text-align: center;
     left: 0;
-    width: 100%;
+    width: 1690px;
     margin-top: auto;
 }
+
+.account-info{
+    flex : 3;
+}
+
 .footer-logo{
     position : absolute;
     top:5%;
@@ -44,6 +49,7 @@
     position : absolute;
     top:27%;
     left:30%;
+    flex : 3;
 }
 
 .footer-category-01{
@@ -51,6 +57,7 @@
     position : absolute;
     top:27%;
     left:60%;
+    flex : 1;
 }
 
 .footer-category-02{
@@ -58,6 +65,7 @@
     position : absolute;
     top:37%;
     left:67%;
+    flex : 1;
 }
 
 .company{
@@ -65,6 +73,7 @@
     position : absolute;
     top:27%;
     left:75%;
+    flex : 1;
 }
 
 p{
