--- a/src/main/frontend/src/styles/MainPage/NewArrival.css
+++ b/src/main/frontend/src/styles/MainPage/NewArrival.css
@@ -1,7 +1,7 @@
 .new-arrivals{
     margin-top: 100px;
     margin-bottom: 150px;
-    width: 100%;
+    width: 1690px;
 }
 
 .new-arrival-title{
@@ -9,7 +9,10 @@
     margin-top: 50px;
     font-size: 20px;
     font-weight: bold;
-    margin-left: 320px;
+    margin-right: 870px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .new-arrival{
