--- a/src/main/frontend/src/styles/Header.css
+++ b/src/main/frontend/src/styles/Header.css
@@ -1,9 +1,47 @@
+.header {
+    background-color: #000000;
+    min-height: 7vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    aspect-ratio: auto;
+    width: 1690px;
+}
+
+.header-search{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 280px;
+    flex : 4;
+}
+
+.header-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width : 400px;
+    flex : 3.5;
+}
+
 .header-menu{
     display: flex;
     align-items: center;
+    justify-content: center;
+    width: 600px;
+    flex : 3.2;
 }
 
-.header-menu-text{
+.basket{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width : 100px;
+    flex : 1.5;
+}
+
+.header-menu a{
     text-align: center;
     font-size: 20px;
     color: #AAAAAA;
@@ -21,13 +59,6 @@
     height: 20px;
 }
 
-
-
-.header-search{
-    display: flex;
-    align-items: center;
-    margin-left : 150px;
-}
 .marginLeft{
     display: flex;
     margin-left: 10px;
@@ -46,30 +77,6 @@
     color: white;
     /* border: 2px solid #ccc; 필요에 따라 테두리 스타일을 추가할 수 있습니다. */
     outline: none;
-}
-
-.header {
-    background-color: #000000;
-    min-height: 7vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    aspect-ratio: auto;
-    width: 100%;
-}
-
-.header-logo {
-    display: inline-block;
-    margin-left: 350px;
-    margin-right: auto;
-}
-
-.basket{
-    display: flex;
-    margin-left: 50px;
-    margin-right: 60px;
-    align-items: center;
 }
 
 .basket-count{
