--- a/src/main/frontend/src/styles/MainPage/QuickLink.css
+++ b/src/main/frontend/src/styles/MainPage/QuickLink.css
@@ -1,7 +1,7 @@
 .quick-links{
     margin-top: 100px;
     margin-bottom: 100px;
-    width: 100%;
+    width: 1690px;
 }
 
 .quick-link-title{
@@ -10,7 +10,10 @@
     margin-bottom: 20px;
     font-size: 20px;
     font-weight: bold;
-    margin-left: 320px;
+    margin-right: 850px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .quick-link{
