feat : 쿠폰 등록까지 완성

--- a/src/main/frontend/src/styles/GoodsDetails/GoodsDetailsProduct.css
+++ b/src/main/frontend/src/styles/GoodsDetails/GoodsDetailsProduct.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: 1670px;
 }
 
 .product-area-img{
