--- a/src/main/frontend/src/styles/GoodsDetails/GoodsDetailsTab.css
+++ b/src/main/frontend/src/styles/GoodsDetails/GoodsDetailsTab.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    width: 100%;
+    width: 1670px;
 }
 
 .product-tab-detailInfo{
