--- a/src/main/frontend/src/components/myPage/inMyCoupon/myPageCouponTab.css
+++ b/src/main/frontend/src/components/myPage/inMyCoupon/myPageCouponTab.css
@@ -9,6 +9,15 @@
     cursor: pointer;
 }
 
+.coupon-content-tab{
+    border : 1px solid #AAAAAA ;
+    border-radius : 5px;
+    cursor : pointer;
+    padding : 10px;
+    margin-bottom: 10px;
+}
+
+
 .coupon-discount {
     color: rgb(73, 71, 71);
 }
