--- a/src/main/frontend/src/components/myPage/inMyQnA/myPageQnA.css
+++ b/src/main/frontend/src/components/myPage/inMyQnA/myPageQnA.css
@@ -11,6 +11,11 @@
     width: 100%;
 }
 
+.my-qna-title{
+    display: grid;
+    place-items: center;
+}
+
 .form-grid-tab {
     display: flex;
     height: auto;
@@ -96,6 +101,26 @@
         display: flex;
         gap: 7.68px;
         height: 64.6px;
-        padding: 0.2px 109.53px 1.4px 110.19px;
         position: relative;
+        margin-left: 20px;
       }
+
+.qna-title-area{
+    font-size: 15px;
+    color: black;
+    width: 400px;
+}
+
+.qna-content-area{
+    font-size: 15px;
+    color: black;
+    width: 400px;
+    height: 250px;
+}
+
+.text-wrapper-3{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 100px;
+}
